// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`radio.task.push via gh.issues given: [case1] push new task to gh.issues (default auth via keyrack) when: [t1] push without title (no --auth flag) then: output names the fix, as snapped 1`] = `
{
  "stderr": "🪨 run solid skill repo=bhuild/role=dispatcher/skill=radio.task.push
   └─ ✋ blocked by constraints

✋ ConstraintError: --title required for new tasks; add --title "..." or use --exid to update an extant task",
  "stdout": "🪨 run solid skill repo=bhuild/role=dispatcher/skill=radio.task.push",
}
`;

exports[`radio.task.push via gh.issues given: [case7] auth misconfig surfaces a graceful ✋ (unset env token) when: [t0] push with --auth as-robot:env(VAR) where VAR is not set then: the human-readable output matches snapshot 1`] = `
"🪨 run solid skill repo=bhuild/role=dispatcher/skill=radio.task.push

🦫 held for the radio
   ├─ task    = auth-fail env test <ts>
   ├─ into    = ehmpathy/rhachet-roles-bhuild-demo
   ├─ status  = QUEUED (upstream:auth)
   ├─ held at = .behavior/.radio/ (no route bound to this branch)
   ├─ backlog = 1 await the radio
   └─ fix it: ✋ ConstraintError: --auth as-robot:env(RADIO_ACCEPT_UNSET_TOKEN) specified but RADIO_ACCEPT_UNSET_TOKEN is not set
      ├─ hint: set RADIO_ACCEPT_UNSET_TOKEN in the environment
      └─ then the next push delivers the backlog first"
`;

exports[`radio.task.push via gh.issues given: [case8] rejected robot token surfaces the as-human nudge (gh 401) when: [t0] push with an env token that github rejects (401) then: the human-readable held output matches snapshot, volatile bytes masked 1`] = `
"🪨 run solid skill repo=bhuild/role=dispatcher/skill=radio.task.push

🦫 held for the radio
   ├─ task    = auth-fail 401 test <ts>
   ├─ into    = ehmpathy/rhachet-roles-bhuild-demo
   ├─ status  = QUEUED (upstream:401)
   ├─ held at = .behavior/.radio/ (no route bound to this branch)
   ├─ backlog = 1 await the radio
   └─ fix it: ✋ ConstraintError: github auth failed: the robot token was rejected by github (401)
      ├─ unblock now — re-run as human: --auth as-human
      ├─ or fix the robot token: check its scopes and expiry at its source
      └─ then the next push delivers the backlog first"
`;

exports[`radio.task.push via gh.issues — usage contract given: [case9] --help renders the usage contract (deterministic) when: [t0] push is invoked with --help then: the human-readable usage output matches snapshot 1`] = `
"🪨 run solid skill repo=bhuild/role=dispatcher/skill=radio.task.push

🦫 let's check the meter...

🎙️ radio.task.push --help
   ├─ usage
   │  ├─ radio.task.push --via gh.issues --into owner/repo --title "..." --description "..."
   │  ├─ radio.task.push --via os.fileops --into @this --exid 123 --status CLAIMED
   │  └─ echo "details" | radio.task.push --via gh.issues --into @this --title "..." --description @stdin
   │
   ├─ held, never lost
   │  ├─ every push is recorded first, into $route/.radio/ (or .behavior/.radio/)
   │  ├─ a shut gate or an upstream fault holds it QUEUED, exit 2
   │  ├─ the next push that gets through delivers the backlog first, oldest first
   │  └─ see what waits: radio.task.held
   │
   └─ options
      ├─ --via         channel: gh.issues or os.fileops (required)
      ├─ --into        target: @this (current repo) or owner/repo (required)
      ├─ --title       task title (required for new tasks)
      ├─ --description task description (required for new tasks; supports @stdin)
      ├─ --exid        external id for updates
      ├─ --status      status: QUEUED, CLAIMED, DELIVERED
      ├─ --idem        idempotency: findsert or upsert
      ├─ --auth        mode: as-robot:via-keyrack(owner) | as-robot:env(VAR) | as-robot:shx(cmd) | as-human
      └─ --help, -h    show this help"
`;
